2014-03-22  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: fixed display of very large IDs during
        attachment extraction.

        * mkvmerge: enhancement: improved file type detection speed for
        text subtitle formats.

2014-03-10  Moritz Bunkus  <moritz@bunkus.org>

        * mkvextract: bug fix: during the extraction of chapters, tags or
        segment info XML files with the --redirect-output parameter the
        BOM (byte order mark) was written twice.

2014-03-05  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: MPEG TS: timestamp outliers are ignored if
        they differ at least five minutes from the last valid
        timestamp. Fixes #998.

        * mkvmerge: enhancements: trailing zero bytes will be removed from
        AVC/h.264 NALUs. Implements #997.

2014-03-04  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: fixed timestamp assignment for AVC/h.264
        videos in which recovery point SEIs occur in front of the second
        field of two interlaced fields.

2014-03-02  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.8.0.

2014-02-28  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge, mkvextract: new feature: added support for h.265/HEVC
        by merging the patches from DivX/Rovi Corp. So far HEVC is only
        supported as elementary streams and read from other Matroska
        files.

2014-02-22  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: enhancement: The deprecated ISO 639-1 code "iw" is now
        recognized for Hebrew.

2014-02-15  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: The AC3 packetizer will re-derive the
        sampling frequency and the number of channels from the
        bitstream. This way obviously invalid information from the source
        container like a sampling frequency of 0 Hz will be fixed.

2014-02-05  Moritz Bunkus  <moritz@bunkus.org>
